# shuttle-rs-example

./: Cargo.toml  README.md
migrations/db/: 2024092300001_create_urls.sql
src/: main.rs
