[package]
name = "shuttle-rs-example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
shuttle-shared-db = { version = "0.47.0", features = ["postgres", "sqlx"] }
sqlx = "0.7.1"
tokio = "1.28.2"
serde = { version = "1.0.210", features = ["derive"] }
nanoid = "0.4.0"
url = "2.5.2"
